{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 2187,
  "lineage": "34149b6d-ef42-1473-d185-a1cd9baa435d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-088a4bdad130d7795",
            "arn": "arn:aws:ec2:eu-central-1:959711192947:instance/i-034a546603e73782a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034a546603e73782a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dum307_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e51603c00858b7fc",
            "private_dns": "ip-10-0-24-216.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.24.216",
            "public_dns": "ec2-3-71-111-246.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.71.111.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e0afd3f0ce6cfe21",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06194154c94a4ec9c",
            "tags": {
              "Name": "dum307-wordpress-bastion"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress-bastion",
              "Project": "tms",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aa764a318db515c4"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:loadbalancer/app/dum307-wordpress-backend/4503eb6ed6152a80",
            "arn_suffix": "app/dum307-wordpress-backend/4503eb6ed6152a80",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-dum307-wordpress-backend-1786508607.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:loadbalancer/app/dum307-wordpress-backend/4503eb6ed6152a80",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dum307-wordpress-backend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0337eb56731ea18de"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0179b926f9b7b6449"
              },
              {
                "subnet_id": "subnet-095391be318230cf8"
              },
              {
                "subnet_id": "subnet-0d34c02df9e40ff23"
              }
            ],
            "subnets": [
              "subnet-0179b926f9b7b6449",
              "subnet-095391be318230cf8",
              "subnet-0d34c02df9e40ff23"
            ],
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress",
              "Project": "tms",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f39ac6b74f8c362b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:loadbalancer/app/dum307-wordpress-frontend/94fab0b6548c88ad",
            "arn_suffix": "app/dum307-wordpress-frontend/94fab0b6548c88ad",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dum307-wordpress-frontend-2089196129.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:loadbalancer/app/dum307-wordpress-frontend/94fab0b6548c88ad",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dum307-wordpress-frontend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0337eb56731ea18de"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0403814ecd746ab2c"
              },
              {
                "subnet_id": "subnet-06194154c94a4ec9c"
              },
              {
                "subnet_id": "subnet-08cf16d4907654d49"
              }
            ],
            "subnets": [
              "subnet-0403814ecd746ab2c",
              "subnet-06194154c94a4ec9c",
              "subnet-08cf16d4907654d49"
            ],
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress",
              "Project": "tms",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f39ac6b74f8c362b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:listener/app/dum307-wordpress-backend/4503eb6ed6152a80/1643834f31fee7d4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:targetgroup/aws-targetgroup-backend/779aec95ac723010",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:listener/app/dum307-wordpress-backend/4503eb6ed6152a80/1643834f31fee7d4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:loadbalancer/app/dum307-wordpress-backend/4503eb6ed6152a80",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress",
              "Project": "tms",
              "Terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.back",
            "aws_lb_target_group.back",
            "aws_security_group.allow_http",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:listener/app/dum307-wordpress-frontend/94fab0b6548c88ad/6d3ea4d201c551e5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:targetgroup/aws-targetgroup-frontend/e61beab6782a219f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:listener/app/dum307-wordpress-frontend/94fab0b6548c88ad/6d3ea4d201c551e5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:loadbalancer/app/dum307-wordpress-frontend/94fab0b6548c88ad",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress",
              "Project": "tms",
              "Terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front",
            "aws_lb_target_group.front",
            "aws_security_group.allow_http",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:targetgroup/aws-targetgroup-backend/779aec95ac723010",
            "arn_suffix": "targetgroup/aws-targetgroup-backend/779aec95ac723010",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:targetgroup/aws-targetgroup-backend/779aec95ac723010",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "aws-targetgroup-backend",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress",
              "Project": "tms",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:targetgroup/aws-targetgroup-frontend/e61beab6782a219f",
            "arn_suffix": "targetgroup/aws-targetgroup-frontend/e61beab6782a219f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:959711192947:targetgroup/aws-targetgroup-frontend/e61beab6782a219f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "aws-targetgroup-frontend",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress",
              "Project": "tms",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:security-group/sg-0a9b5d77d3a3c7039",
            "description": "Allow EFS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9b5d77d3a3c7039",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "allow_efs",
            "name_prefix": "",
            "owner_id": "959711192947",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_efs"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "allow_efs",
              "Project": "tms",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:security-group/sg-0337eb56731ea18de",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0337eb56731ea18de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "959711192947",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "allow_http",
              "Project": "tms",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:security-group/sg-0eb8bed4e59f63b8e",
            "description": "Allow MYSQL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb8bed4e59f63b8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_mysql",
            "name_prefix": "",
            "owner_id": "959711192947",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_mysql"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "allow_mysql",
              "Project": "tms",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:security-group/sg-0aa764a318db515c4",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa764a318db515c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "959711192947",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "allow_ssh",
              "Project": "tms",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.efs.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cbd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:security-group/sg-021b64c4dcf2392e5",
            "description": "EFS Security Group",
            "egress": [],
            "id": "sg-021b64c4dcf2392e5",
            "ingress": [],
            "name": "dum307-wordpress-dev-dum307-wordpress-20230717140046068200000002",
            "name_prefix": "dum307-wordpress-dev-dum307-wordpress-",
            "owner_id": "959711192947",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dum307-wordpress-dev-dum307-wordpress",
              "Namespace": "dum307-wordpress",
              "Stage": "dev"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress-dev-dum307-wordpress",
              "Namespace": "dum307-wordpress",
              "Project": "tms",
              "Stage": "dev",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.efs.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "keyed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "_allow_all_egress_",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1792614468",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-021b64c4dcf2392e5",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.efs.module.security_group.aws_security_group.cbd",
            "module.efs.module.security_group.aws_security_group.default",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.template_backend",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-088a4bdad130d7795",
            "arn": "arn:aws:ec2:eu-central-1:959711192947:instance/i-0c199896404fc440b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c199896404fc440b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dum307_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c255c21c4ae97d4d",
            "private_dns": "ip-10-0-115-106.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.115.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-047716c0049352533",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d34c02df9e40ff23",
            "tags": {
              "Name": "dum307-template-backend"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-template-backend",
              "Project": "tms",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0337eb56731ea18de",
              "sg-0aa764a318db515c4"
            ]
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_lb.back",
            "aws_security_group.allow_http",
            "aws_security_group.allow_mysql",
            "aws_security_group.allow_ssh",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "module.db.module.db_instance.aws_cloudwatch_log_group.this",
            "module.db.module.db_instance.aws_db_instance.this",
            "module.db.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.db.module.db_instance.random_id.snapshot_identifier",
            "module.db.module.db_option_group.aws_db_option_group.this",
            "module.db.module.db_parameter_group.aws_db_parameter_group.this",
            "module.db.module.db_subnet_group.aws_db_subnet_group.this",
            "module.efs.aws_efs_file_system.default",
            "module.template_backend.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.template_frontend",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-088a4bdad130d7795",
            "arn": "arn:aws:ec2:eu-central-1:959711192947:instance/i-03ba5dec622805139",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ba5dec622805139",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dum307_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01627404203dfd92c",
            "private_dns": "ip-10-0-21-70.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.21.70",
            "public_dns": "ec2-3-71-51-251.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.71.51.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07e403b45e289ebc0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06194154c94a4ec9c",
            "tags": {
              "Name": "dum307-template-frontend"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-template-frontend",
              "Project": "tms",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0337eb56731ea18de",
              "sg-0aa764a318db515c4"
            ]
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_lb.back",
            "aws_security_group.allow_http",
            "aws_security_group.allow_ssh",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "module.template_frontend.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:network-acl/acl-0581ae89a370914a9",
            "default_network_acl_id": "acl-0581ae89a370914a9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0581ae89a370914a9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "959711192947",
            "subnet_ids": [
              "subnet-0179b926f9b7b6449",
              "subnet-0403814ecd746ab2c",
              "subnet-06194154c94a4ec9c",
              "subnet-08cf16d4907654d49",
              "subnet-095391be318230cf8",
              "subnet-0d34c02df9e40ff23"
            ],
            "tags": {
              "Name": "dum307-wordpress-default"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress-default",
              "Project": "tms",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:route-table/rtb-072ade02653a40d47",
            "default_route_table_id": "rtb-072ade02653a40d47",
            "id": "rtb-072ade02653a40d47",
            "owner_id": "959711192947",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "dum307-wordpress-default"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress-default",
              "Project": "tms",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:security-group/sg-0996a62010a7220df",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0996a62010a7220df",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "959711192947",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dum307-wordpress-default"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress-default",
              "Project": "tms",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d16b76ac770d3d8a",
            "domain": "vpc",
            "id": "eipalloc-0d16b76ac770d3d8a",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-78-172-197.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.172.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dum307-wordpress-eu-central-1a"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress-eu-central-1a",
              "Project": "tms",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:internet-gateway/igw-0165286314f46f93e",
            "id": "igw-0165286314f46f93e",
            "owner_id": "959711192947",
            "tags": {
              "Name": "dum307-wordpress"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress",
              "Project": "tms",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d16b76ac770d3d8a",
            "association_id": "eipassoc-07618a8ed54b21dfb",
            "connectivity_type": "public",
            "id": "nat-0b0bfaaeda14a1027",
            "network_interface_id": "eni-0d7e0aa1cf62a89ff",
            "private_ip": "10.0.5.29",
            "public_ip": "3.78.172.197",
            "subnet_id": "subnet-06194154c94a4ec9c",
            "tags": {
              "Name": "dum307-wordpress-eu-central-1a"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress-eu-central-1a",
              "Project": "tms",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ca98b676cec794151080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b0bfaaeda14a1027",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ca98b676cec79415",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0165286314f46f93e",
            "id": "r-rtb-00b44d24afa5be1f01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00b44d24afa5be1f0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:route-table/rtb-0ca98b676cec79415",
            "id": "rtb-0ca98b676cec79415",
            "owner_id": "959711192947",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dum307-wordpress-private"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress-private",
              "Project": "tms",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:route-table/rtb-00b44d24afa5be1f0",
            "id": "rtb-00b44d24afa5be1f0",
            "owner_id": "959711192947",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dum307-wordpress-public"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress-public",
              "Project": "tms",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c506bc63a8cb3b1",
            "route_table_id": "rtb-0ca98b676cec79415",
            "subnet_id": "subnet-0d34c02df9e40ff23"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005f31e0649ee1e58",
            "route_table_id": "rtb-0ca98b676cec79415",
            "subnet_id": "subnet-0179b926f9b7b6449"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cc71feafd65fa80",
            "route_table_id": "rtb-0ca98b676cec79415",
            "subnet_id": "subnet-095391be318230cf8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02243f2e4dc7795f5",
            "route_table_id": "rtb-00b44d24afa5be1f0",
            "subnet_id": "subnet-06194154c94a4ec9c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a78b4f039dc1946",
            "route_table_id": "rtb-00b44d24afa5be1f0",
            "subnet_id": "subnet-08cf16d4907654d49"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c87a771a84847308",
            "route_table_id": "rtb-00b44d24afa5be1f0",
            "subnet_id": "subnet-0403814ecd746ab2c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:subnet/subnet-0d34c02df9e40ff23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d34c02df9e40ff23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959711192947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dum307-wordpress-private-eu-central-1a"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress-private-eu-central-1a",
              "Project": "tms",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:subnet/subnet-0179b926f9b7b6449",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0179b926f9b7b6449",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959711192947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dum307-wordpress-private-eu-central-1b"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress-private-eu-central-1b",
              "Project": "tms",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:subnet/subnet-095391be318230cf8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095391be318230cf8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959711192947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dum307-wordpress-private-eu-central-1c"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress-private-eu-central-1c",
              "Project": "tms",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:subnet/subnet-06194154c94a4ec9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06194154c94a4ec9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959711192947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dum307-wordpress-public-eu-central-1a"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress-public-eu-central-1a",
              "Project": "tms",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:subnet/subnet-08cf16d4907654d49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cf16d4907654d49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959711192947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dum307-wordpress-public-eu-central-1b"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress-public-eu-central-1b",
              "Project": "tms",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:subnet/subnet-0403814ecd746ab2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0403814ecd746ab2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959711192947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dum307-wordpress-public-eu-central-1c"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress-public-eu-central-1c",
              "Project": "tms",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f39ac6b74f8c362b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:959711192947:vpc/vpc-0f39ac6b74f8c362b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0581ae89a370914a9",
            "default_route_table_id": "rtb-072ade02653a40d47",
            "default_security_group_id": "sg-0996a62010a7220df",
            "dhcp_options_id": "dopt-00f3a28e9b656dcad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f39ac6b74f8c362b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-072ade02653a40d47",
            "owner_id": "959711192947",
            "tags": {
              "Name": "dum307-wordpress"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dum307-wordpress",
              "Project": "tms",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}